--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,7 @@ description = "A package for underwater acoustic wave calculations"
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
-    "numpy",
-	"math"
+    "numpy""
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
